<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/header_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="50dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/header_text"
        android:textColor="@color/white"
        android:textSize="36sp" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header_text"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="8dp"
        android:background="#30ffffff"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawablePadding="15dp"
        android:fontFamily="serif"
        android:hint="@string/username_hint_text"
        android:inputType="text"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username"
        android:layout_marginStart="15dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:background="#30ffffff"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawablePadding="15dp"
        android:fontFamily="serif"
        android:hint="@string/password_hint_text"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="18sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_marginStart="15dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/roundbtn"
        android:backgroundTint="@color/white"
        android:fontFamily="serif"
        android:onClick="loginForm"
        android:text="@string/btn_text"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:ignore="UsingOnClickInXml" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:fontFamily="serif"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:layout_below="@id/login_btn"
        android:layout_margin="40dp"
        android:gravity="center"
        />

    <LinearLayout
        android:layout_marginLeft="30dp"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="30dp"
        android:id="@+id/icon_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_alignParentBottom="true">
        <ImageView
            android:layout_width="42dp"
            android:contentDescription="@string/google_icon"
            android:layout_height="42dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:src="@drawable/google" />
        <ImageView
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:paddingLeft="8dp"
            android:contentDescription="@string/twitter_icon"
            android:paddingRight="8dp"
            android:src="@drawable/twitter" />
        <ImageView
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:paddingLeft="8dp"
            android:contentDescription="@string/fb_icon"
            android:paddingRight="8dp"
            android:src="@drawable/fb" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/or_sign_in"
        android:fontFamily="serif"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_above="@id/icon_layout"
        android:gravity="center"
        />



</RelativeLayout>