<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="50dp"
    tools:context=".ProfileActivity">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/profile_image"
        android:background="@drawable/dimen_circle"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/profile_name"
        android:textColor="@color/white"
        android:fontFamily="serif"
        android:gravity="center_horizontal|center_vertical"
        android:textSize="18sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/designation"
        android:textColor="@color/white"
        android:fontFamily="serif"
        android:gravity="center_horizontal|center_vertical"
        android:textSize="14sp"/>

<TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/organization"
        android:textColor="@color/white"
        android:fontFamily="serif"
        android:gravity="center_horizontal|center_vertical"
        android:textSize="14sp"/>

<TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/batch"
        android:textColor="@color/white"
        android:fontFamily="serif"
        android:gravity="center_horizontal|center_vertical"
        android:textSize="14sp"/>

</LinearLayout>